# ml-math

./: LICENSE  MANIFEST.in  README.md  ann.py  knn.py  linear.py  magicbricks_hyderabad.csv  pyproject.toml  setup.cfg  setup.py
myml/: __init__.py  diagnostics.py  feature_selection.py  prediction.py  preprocessing.py  regression.py  visualization.py
myml_regression.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_myml.py
