[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myml-regression"
version = "0.1.0"
description = "A custom ML regression package built from scratch without Scikit-learn"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["machine-learning", "regression", "OLS", "ridge", "lasso", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "twine>=4.0",
    "build>=0.10",
]

[project.urls]
Homepage = "https://github.com/yourusername/myml-regression"
Issues = "https://github.com/yourusername/myml-regression/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["myml*"]
